--- a/test.css
+++ b/test.css
@@ -5,7 +5,7 @@ body {
   margin: 0;
   display: grid;
   grid-template-columns: 80vw 20vw;
-  grid-template-rows: 8vh 62vh 15vh auto;
+  grid-template-rows: 8vh auto 62vh 15vh;
   grid-gap: 0.5rem;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
@@ -82,8 +82,8 @@ button {
   border-radius: 5px;
   grid-column-start: 1;
   grid-column-end: 2;
-  grid-row-start: 2;
-  grid-row-end: 3;
+  grid-row-start: 3;
+  grid-row-end: 4;
   background-color: rgb(173, 216, 230);
 }
 
@@ -114,8 +114,8 @@ button {
   border-radius: 5px;
   grid-column-start: 1;
   grid-column-end: 3;
-  grid-row-start: 3;
-  grid-row-end: 4;
+  grid-row-start: 4;
+  grid-row-end: 5;
   background-color: rgb(173, 216, 230);
 }
 
@@ -124,8 +124,8 @@ button {
   border-radius: 5px;
   grid-column-start: 2;
   grid-column-end: 3;
-  grid-row-start: 2;
-  grid-row-end: 3;
+  grid-row-start: 3;
+  grid-row-end: 4;
   padding-bottom: 30px;
   background-color: rgb(173, 216, 230);
 }
@@ -135,8 +135,8 @@ button {
   border-radius: 5px;
   grid-column-start: 2;
   grid-column-end: 3;
-  grid-row-start: 2;
-  grid-row-end: 3;
+  grid-row-start: 3;
+  grid-row-end: 4;
   background-color: rgb(173, 216, 230);
 }
 
@@ -145,8 +145,8 @@ button {
   border-radius: 5px;
   grid-column-start: 1;
   grid-column-end: 3;
-  grid-row-start: 4;
-  grid-row-end: 5;
+  grid-row-start: 2;
+  grid-row-end: 3;
   background-color: rgb(173, 216, 230);
 }
   
@@ -178,8 +178,8 @@ button {
     border-radius: 5px;
     grid-column-start: 1;
     grid-column-end: 2;
-    grid-row-start: 2;
-    grid-row-end: 3;
+    grid-row-start: 3;
+    grid-row-end: 4;
     background-color: rgb(173, 216, 230);
   }
 
@@ -187,8 +187,8 @@ button {
     border-radius: 5px;
     grid-column-start: 1;
     grid-column-end: 2;
-    grid-row-start: 3;
-    grid-row-end: 4;
+    grid-row-start: 4;
+    grid-row-end: 5;
     padding-bottom: 30px;
     background-color: rgb(173, 216, 230);
   }
@@ -197,8 +197,8 @@ button {
     border-radius: 5px;
     grid-column-start: 1;
     grid-column-end: 2;
-    grid-row-start: 3;
-    grid-row-end: 4;
+    grid-row-start: 4;
+    grid-row-end: 5;
     background-color: rgb(173, 216, 230);
   }
 
@@ -206,8 +206,8 @@ button {
     border-radius: 5px;
     grid-column-start: 1;
     grid-column-end: 2;
-    grid-row-start: 4;
-    grid-row-end: 5;
+    grid-row-start: 5;
+    grid-row-end: 6;
     background-color: rgb(173, 216, 230);
   }
 
@@ -216,8 +216,8 @@ button {
     border-radius: 5px;
     grid-column-start: 1;
     grid-column-end: 2;
-    grid-row-start: 5;
-    grid-row-end: 6;
+    grid-row-start: 2;
+    grid-row-end: 3;
     background-color: rgb(173, 216, 230);
   }
 
